--- a/ContactUs.html
+++ b/ContactUs.html
@@ -17,7 +17,7 @@
 			<a href="ContactUs.html" class="NavContact"> Contact Us </a>
 		</div>
 		<div class="Contact">
-			<a href="https://www.facebook.com/MacDeMarcoBand/"><img alt="Facebook Icon" src="Assets/Facebook.png"></a>
+			<a href="https://www.facebook.com/MacDeMarcoBand/"><img alt="Facebook Icon" src="Assets/facebook.png"></a>
 			<a href="https://twitter.com/msldemarco"><img alt="Twitter Icon" src="Assets/twitter.png"></a>
 			<a href="https://www.instagram.com/macdemarco/?hl=en"><img alt="Instagram Icon" src="Assets/instagram.png"></a>
 			<a href="https://open.spotify.com/artist/3Sz7ZnJQBIHsXLUSo0OQtM"><img alt="Spotify Icon" src="Assets/spotify.png"></a>
