--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<script  src="JS/Javascript.js"></script> 
 	</head>
 	<body id = "Homepage">
+	<a href="CriticalLog.html" id = "CriticalLogLink"> Critical Log </a>
+	<a href="Demo.html" id = "DemoLink"> Demo </a>
 		<div class = "title">
 			<button id = "HomePageButton" onclick="HomePage()">
 				<img alt="Bang Shape" src="Assets/bang-md.png">
